test/fail/binop-t.rnp
'hi' + 'hi';
---
TypeError: + expected number but got string
fail/binop-t.rnp:1:1
> 1 | 'hi' + 'hi';
    | ^^^^ + expected number but got string
  2 | 
